fix: scrolling of overlay with overflowing content

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,11 +7,11 @@
   top: 10px;
   z-index: 99;
   max-width: 100%;
+  max-height: 100%;
 }
 
 #poi_info_card {
   max-width: 100%;
-  max-height: 80%;
   height: auto;
   width: 20rem;
 }
